# gcmake-emscripten-compat

./: CMakeLists.txt  Config.cmake.in  README.md
